# aghub

./: .editorconfig  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.CN.md  README.md  justfile  package.json  rustfmt.toml  skills-lock.json
.agents/skills/animate/: SKILL.md
.agents/skills/delight/: SKILL.md
.agents/skills/harden/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/optimize/: SKILL.md
.agents/skills/overdrive/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: descriptor.rs  lib.rs  macros.rs
crates/agents/tests/: descriptor_regression.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  extractors.rs  lib.rs  main.rs  state.rs
crates/api/src/dto/: agents.rs  credential.rs  integrations.rs  market.rs  mcp.rs  mod.rs  skill.rs
crates/api/src/routes/: agents.rs  catchers.rs  credentials.rs  integrations.rs  market.rs  mcps.rs  mod.rs  skills.rs  sub_agents.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: add.rs  delete.rs  disable.rs  enable.rs  get.rs  interactive.rs  mod.rs  update.rs
crates/cli/src/ui/: search.rs
crates/cli/tests/: cli_tests.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: adapter.rs  all_agents.rs  availability.rs  errors.rs  lib.rs  manager.rs  models.rs  paths.rs  testing.rs  transfer.rs
crates/core/src/adapters/: claude.rs  list.rs  map.rs  mod.rs  opencode.rs  toml.rs
crates/core/src/agents/: aider.rs  amazonqcli.rs  amp.rs  antigravity.rs  augmentcode.rs  claude.rs  cline.rs  codex.rs  copilot.rs  crush.rs  cursor.rs  factory.rs  firebase.rs  firebender.rs  gemini.rs  gemini_cli.rs  goose.rs  jetbrains_ai.rs  jules.rs  junie.rs  kilocode.rs  kimi.rs  kiro.rs  mistral.rs  mod.rs  openclaw.rs  opencode.rs  openhands.rs  pi.rs  qwen.rs  roocode.rs  trae.rs  warp.rs  windsurf.rs  zed.rs
crates/core/src/format/: json_list.rs  json_map.rs  json_opencode.rs  toml_format.rs
crates/core/src/manager/: mcp.rs  mod.rs  skill.rs  sub_agent.rs
crates/core/src/registry/: descriptor.rs  mod.rs
crates/core/src/skills/: discovery.rs  mod.rs
crates/core/tests/: integration_tests.rs  mcp_tests.rs  test_agent_paths.rs
crates/desktop/: AGENTS.md  eslint.config.js  index.html  package.json  vite.config.ts
crates/desktop/src/: App.tsx  index.css
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/git/: Cargo.toml
crates/git/src/: lib.rs  source.rs
crates/skill/: Cargo.toml
crates/skill/examples/: parse_skill.rs  unpack_skill.rs
crates/skill/src/: error.rs  install.rs  lib.rs  model.rs  package.rs  parser.rs  sanitize.rs  validator.rs
crates/skill/src/lock/: global.rs  hash.rs  local.rs  mod.rs  types.rs
crates/skill/tests/: fixture_validation.rs
crates/skill/tests/fixtures/global-lock-with-timestamps/: expected.json  metadata.json
crates/skill/tests/fixtures/local-lock-simple/: expected.json  metadata.json
crates/skill/tests/fixtures/local-lock-sorted/: expected.json  metadata.json
crates/skills-ref/src/: cli.rs  models.rs  parser.rs  validator.rs
crates/skills-ref/tests/: test_parser.rs  (+1 more)
crates/skills-sh/: Cargo.toml
scripts/: bump.js
(+135 files in other folders)
