[package]
name = "aghub-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for aghub"

[[bin]]
name = "aghub-api"
path = "src/main.rs"

[dependencies]
aghub-core = { path = "../core" }
rocket = { version = "0.5", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
