[package]
name = "aghub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true, optional = true }
skill = { path = "../skill" }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = [ "testing" ]
agent-validation = [  ]
testing = [ "tempfile" ]
